copadoAddon/main/default/objects/Defect__c/Defect__c.object-meta.xml
<CustomObject>
    <label>Defect</label>
    <nameField>
        <label>Defect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>