copadoAddon/main/default/objects/Defect__c/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <label>Test Case</label>
    <referenceTo>Test_Case__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>